objects/Timesheet_Line__c/Timesheet_Line__c.object-meta.xml
<CustomObject>
    <label>Timesheet Line</label>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Timesheet Line No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>