objects/Timesheet_Line__c/fields/Calculate_OT_Daily__c.field-meta.xml
<CustomField>
    <fullName>Calculate_OT_Daily__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate OT Daily</label>
    <type>Checkbox</type>
</CustomField>