objects/Timesheet_Line__c/fields/Calculated_by_System__c.field-meta.xml
<CustomField>
    <fullName>Calculated_by_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculated by System</label>
    <type>Checkbox</type>
</CustomField>