objects/Timesheet_Line__c/fields/Daily_OT_After_Number_of_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Daily_OT_After_Number_of_Hrs__c</fullName>
    <label>Daily OT After Number of Hrs</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>