objects/Timesheet_Line__c/fields/For_End_Time__c.field-meta.xml
<CustomField>
    <fullName>For_End_Time__c</fullName>
    <formula>IF(

AND(
End_Time__c &gt;= TIMEVALUE("18:00:00.000"),
End_Time__c &lt;= TIMEVALUE("23:59:59.000")
)
,
End_Time__c, /* Overtime */
IF(


AND(
End_Time__c &gt;= TIMEVALUE("00:00:00.000"),
End_Time__c &lt;= TIMEVALUE("06:00:00.000")
)
,
End_Time__c, /* Overtime */
TIMEVALUE("06:00:00.000") /* Regular hours */ /* Regular hours */

)
)</formula>
    <label>For End Time</label>
    <type>Time</type>
</CustomField>