objects/Timesheet_Line__c/fields/For_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>For_Start_Time__c</fullName>
    <formula>IF(

AND(
Start_Time__c &gt;= TIMEVALUE("18:00:00.000"),
Start_Time__c &lt;= TIMEVALUE("23:59:59.000")
)
,
Start_Time__c , /* Overtime */
IF(


AND(
Start_Time__c &gt;= TIMEVALUE("00:00:00.000"),
Start_Time__c &lt;= TIMEVALUE("06:00:00.000")
)
,
Start_Time__c , /* Overtime */
TIMEVALUE("18:00:00.000") /* Regular hours */ /* Regular hours */

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For StartTime</label>
    <type>Time</type>
</CustomField>