objects/Timesheet_Line__c/fields/Fringe_Benefit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fringe_Benefit_Amount__c</fullName>
    <label>Fringe Benefit Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>