objects/Timesheet_Line__c/fields/Holiday_OTHours__c.field-meta.xml
<CustomField>
    <fullName>Holiday_OTHours__c</fullName>
    <formula>if (
or(
Scheduled_Date__c  = DATE(2023,5,29),
Scheduled_Date__c  = DATE(2023,7,4),
Scheduled_Date__c  = DATE(2023,9,4),
Scheduled_Date__c  = DATE(2023,11,23),
Scheduled_Date__c  = DATE(2023,11,24),
Scheduled_Date__c  = DATE(2023,12,22),
Scheduled_Date__c  = DATE(2023,12,24),
Scheduled_Date__c  = DATE(2023,12,25),
Scheduled_Date__c  = DATE(2024,1,1)
),
(End_Time__c- Start_Time__c )/ 3600000 ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exempt Holiday Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>