objects/Timesheet_Line__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <label>Job Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>