objects/Timesheet_Line__c/fields/Lunch_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Hours__c</fullName>
    <label>Lunch Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>