objects/Timesheet_Line__c/fields/Net_Hours__c.field-meta.xml
<CustomField>
    <fullName>Net_Hours__c</fullName>
    <label>Net Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>