objects/Timesheet_Line__c/fields/New_Ot_End_hour__c.field-meta.xml
<CustomField>
    <fullName>New_Ot_End_hour__c</fullName>
    <formula>IF(

AND(
End_Time__c &gt;= TIMEVALUE("18:00:00.000"),
End_Time__c &lt;= TIMEVALUE("00:00:00.000")
)
,
(TIMEVALUE("00:00:00.000")
- End_Time__c )/3600000 , /* Overtime */
IF(


AND(
End_Time__c &gt;= TIMEVALUE("00:00:00.000"),
End_Time__c &lt;= TIMEVALUE("06:00:00.000")
)
,
(TIMEVALUE("06:00:00.000")
- End_Time__c )/3600000, /* Overtime */
0 /* Regular hours */ /* Regular hours */

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Ot End hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>