objects/Timesheet_Line__c/fields/NonBillable__c.field-meta.xml
<CustomField>
    <fullName>NonBillable__c</fullName>
    <formula>T_M_Line__r.Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NonBillable</label>
    <type>Checkbox</type>
</CustomField>