objects/Timesheet_Line__c/fields/OT_lUnch__c.field-meta.xml
<CustomField>
    <fullName>OT_lUnch__c</fullName>
    <formula>IF(
OR(
WEEKDAY(Scheduled_Date__c) = 1, /* Sunday */
WEEKDAY(Scheduled_Date__c) = 7 /* Saturday */
),
(End_Time__c - Start_Time__c) / 3600000, /* Weekend, not considered overtime */
if((New_Ot_End_hour__c + New_Ot_Start_Hours__c)=0,Lunch_Hours__c,New_Ot_End_hour__c + New_Ot_Start_Hours__c)) - Lunch_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exempt OT Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>