objects/Timesheet_Line__c/fields/OT_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>OT_Start_Time__c</fullName>
    <formula>IF(
or(
AND(
Start_Time__c &gt;= TIMEVALUE("18:00:00.000"),
Start_Time__c &lt;= TIMEVALUE("23:59:59.000")
),
AND(
Start_Time__c &gt;= TIMEVALUE("00:00:00.000"),
Start_Time__c &lt;= TIMEVALUE("06:00:00.000")
)
)
,
true, /* Overtime */

false

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OT_Start_Time</label>
    <type>Checkbox</type>
</CustomField>