objects/Timesheet_Line__c/fields/OTHOURS__c.field-meta.xml
<CustomField>
    <fullName>OTHOURS__c</fullName>
    <formula>IF(
OR(
WEEKDAY(Scheduled_Date__c) = 1, /* Sunday */
WEEKDAY(Scheduled_Date__c) = 7 /* Saturday */
),
(End_Time__c - Start_Time__c) / 3600000, /* Weekend, not considered overtime */
(
if(OR(OT_END_Time__c,OT_Start_Time__c),
For_End_Time__c
-
For_Start_Time__c
,0)) / 3600000

)</formula>
    <label>OT HOURS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>