objects/Timesheet_Line__c/fields/Parent_Line__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Line</label>
    <referenceTo>Timesheet_Line__c</referenceTo>
    <relationshipLabel>Timesheet Lines</relationshipLabel>
    <relationshipName>Timesheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>