objects/Timesheet_Line__c/fields/Pay_Rule_Line__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rule_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Rule Line</label>
    <referenceTo>Pay_Rule_Line__c</referenceTo>
    <relationshipLabel>Timesheet Lines</relationshipLabel>
    <relationshipName>Timesheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>