objects/Timesheet_Line__c/fields/Payrule_CSID__c.field-meta.xml
<CustomField>
    <fullName>Payrule_CSID__c</fullName>
    <formula>Pay_Rule__r.CSID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payrule CSID</label>
    <type>Text</type>
</CustomField>