objects/Timesheet_Line__c/fields/Prevailing_Wage_Job_Time__c.field-meta.xml
<CustomField>
    <fullName>Prevailing_Wage_Job_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevailing Wage Job Time</label>
    <type>Checkbox</type>
</CustomField>