objects/Timesheet_Line__c/fields/PW_Job_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>PW_Job_Type_Code__c</fullName>
    <label>PW Job Type Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>