objects/Timesheet_Line__c/fields/Resource_Off__c.field-meta.xml
<CustomField>
    <fullName>Resource_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Off</label>
    <referenceTo>Resource_Off__c</referenceTo>
    <relationshipLabel>Timesheet Lines</relationshipLabel>
    <relationshipName>Timesheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>