objects/Timesheet_Line__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Order__c.Service_Center__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sales_Order_Service_Center__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Timesheet Lines</relationshipLabel>
    <relationshipName>Timesheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>