objects/Timesheet_Line__c/fields/Sales_Order_D365_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_D365_Project_Id__c</fullName>
    <formula>HYPERLINK(
    "/" &amp; Sales_Order__c,
    IF(
        ISBLANK(Sales_Order__r.D365_Project_ID__c),
        Sales_Order__r.Name,
        Sales_Order__r.Name &amp; " - " &amp; Sales_Order__r.D365_Project_ID__c
    ),
    "_self"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order</label>
    <type>Text</type>
</CustomField>