objects/Timesheet_Line__c/fields/Sales_Order_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Description__c</fullName>
    <label>Sales Order Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>