objects/Timesheet_Line__c/fields/Sales_Order_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>Timesheet Lines</relationshipLabel>
    <relationshipName>Timesheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>