objects/Timesheet_Line__c/fields/Sales_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Type__c</fullName>
    <label>Sales Order Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>