objects/Timesheet_Line__c/fields/System_Created_Entry__c.field-meta.xml
<CustomField>
    <fullName>System_Created_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Created Entry</label>
    <type>Checkbox</type>
</CustomField>