objects/Timesheet_Line__c/fields/T_M_Status__c.field-meta.xml
<CustomField>
    <fullName>T_M_Status__c</fullName>
    <formula>TEXT( TM__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;M Status</label>
    <type>Text</type>
</CustomField>