objects/Timesheet_Line__c/fields/Time_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Time_Type_Code__c</fullName>
    <label>Time Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Time_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Time_Rate_Code</valueSetName>
    </valueSet>
</CustomField>