objects/Timesheet_Line__c/fields/TM__c.field-meta.xml
<CustomField>
    <fullName>TM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>T&amp;M</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TM__c.Sales_Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sales_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TM__c</referenceTo>
    <relationshipLabel>Timesheet Lines</relationshipLabel>
    <relationshipName>Timesheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>