objects/Timesheet_Line__c/fields/Week_Day__c.field-meta.xml
<CustomField>
    <fullName>Week_Day__c</fullName>
    <label>Week Day</label>
    <length>30</length>
    <type>Text</type>
</CustomField>