objects/Timesheet_Line__c/fields/Work_as_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_as_Resource_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work as Resource Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Resource_Type__c.Category__c</field>
            <operation>equals</operation>
            <value>Labor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Timesheet Lines</relationshipLabel>
    <relationshipName>Timesheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>